--- a/about.html
+++ b/about.html
@@ -9,27 +9,27 @@
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="/dist/css/main.min.css">
 </head>
 <body>
     <div class="container">
         <header class="header">
             <div class="header_top">
                 <div class="social_wrapp">
-                    <a class="header_top__social_link" href="https://vk.com/svetemuzic"><img class="header_top__social_icons" src="./images/icons/vk.png" alt="vk_icon"></a>
-                    <a class="header_top__social_link" href="#"><img class="header_top__social_icons" src="./images/icons/telegramm.png" alt="telegram_icon"></a>
-                    <a class="header_top__social_link" href="#"><img class="header_top__social_icons" src="./images/icons/whatsapp.png" alt="whatsapp_icon"></a>
+                    <a class="header_top__social_link" href="https://vk.com/svetemuzic"><img class="header_top__social_icons" src="/dist/images/icons/vk.png" alt="vk_icon"></a>
+                    <a class="header_top__social_link" href="#"><img class="header_top__social_icons" src="/dist/images/icons/telegramm.png" alt="telegram_icon"></a>
+                    <a class="header_top__social_link" href="#"><img class="header_top__social_icons" src="/dist/images/icons/whatsapp.png" alt="whatsapp_icon"></a>
                     <a href="mailto:help@example.com?subject=Вопрос&body=Здравствуйте," class="header_top__link" >help@example.com</a>
                 </div>
                 <div class="header_phone">
-                    <img src="./images/icons/phone.png" alt="phone_icon">
+                    <img src="/dist/images/icons/phone.png" alt="phone_icon">
                     <a class="phone_link" href="tel:89104570560"><span class="phone_text">Обратный звонок</span></a>
                     <span class="phone_number">8(910)457-05-60</span>
                 </div>
             </div>
             <div class="header_bottom">
                 <div class="logo">
-                    <a href="index.html"><img src="./images/top_logo.png" alt="logo"></a>
+                    <a href="index.html"><img src="/dist/images/top_logo.png" alt="logo"></a>
                 </div>
                 <nav class="header_navigate">
                     <ul class="header_navigate__list">
@@ -44,6 +44,7 @@
             </div>
         </header>
         <main class="main">
+            <div class="message"></div>
             <div class="wrapp">
                 <h2 class="about__title">Обо мне</h2>
                 <p class="about_quote">"Не забывай делать невозможное, чтобы достичь возможного".<br> А. Рубинштейн</p>
@@ -51,7 +52,7 @@
                     <picture class="about_detail__pic">
                         <!-- <source type="image/avif" srcset="">
                         <source type="image/avif" srcset=""> -->
-                        <img class="about_detail__image" src="./images/about.png" alt="top_image">
+                        <img class="about_detail__image" src="/dist/images/about.png" alt="top_image">
                     </picture>
                     <div class="about_detail__descript">
                         <p class="about_detail__text first">Идти за мечтой! Первые шаги по новому пути, какого это?</p>
@@ -68,12 +69,12 @@
             <div class="footer_top">
                 <div class="footer_wrapp">
                     <div class="logo">
-                        <a href="index.html"><img class="./footer_logo" src="images/footer_logo.png" alt="logo"></a>
+                        <a href="index.html"><img class="footer_logo" src="/dist/images/footer_logo.png" alt="logo"></a>
                     </div>
                     <div class="social_wrapp footer_social">
-                        <a class="footer_top__social_link" href="https://vk.com/svetemuzic"><img class="footer_top__social_icons" src="./images/icons/vk.png" alt="vk_icon"></a>
-                        <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="./images/icons/telegramm.png" alt="telegram_icon"></a>
-                        <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="./images/icons/whatsapp.png" alt="whatsapp_icon"></a>                     
+                        <a class="footer_top__social_link" href="https://vk.com/svetemuzic"><img class="footer_top__social_icons" src="/dist/images/icons/vk.png" alt="vk_icon"></a>
+                        <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="/dist/images/icons/telegramm.png" alt="telegram_icon"></a>
+                        <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="/dist/images/icons//whatsapp.png" alt="whatsapp_icon"></a>                     
                     </div>
                 </div>
                 <nav class="footer_navigate">
@@ -88,23 +89,23 @@
                 </nav>
                 <div class="footer_contacts">
                     <div class="footer_phone">
-                        <img src="./images/icons/phone.png" alt="phone_icon">
+                        <img src="/dist/images/icons/phone.png" alt="phone_icon">
                         <a href="tel:89104570560" class="phone_number">8(910)457-05-60</a>
                     </div>
                     <div class="email">
-                        <img src="./images/icons/mail.png" alt="email_icon">
+                        <img src="/dist/images/icons/mail.png" alt="email_icon">
                         <a href="mailto:help@example.com?subject=Вопрос&body=Здравствуйте," class="header_top__link">help@example.com</a>
                     </div>
                 </div>
             </div>
             <div class="footer_bottom">
                 <span class="footer_bottom__text">Семейный эксперт Елена Светличная ©, 2025</span>
-                <a class="footer_bottom__link" href="#">Договор оферты</a>
+                <a class="footer_bottom__link" href="oferta.html">Договор оферты</a>
                 <a class="footer_bottom__link" href="#">Пользовательское соглашение</a>
             </div>
         </footer>
     </div>
 
-    <script src="./script/script.js"></script>
+    <!-- <script src="./script/script.js"></script> -->
 </body>
 </html>
