--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                         <!-- <source type="image/avif" srcset="">
                         <source type="image/avif" srcset=""> -->
                         <img class="top__image" src="/dist/images/image_top.png" alt="top_image">
-                    </picture>
-                    
+                    </picture> 
                 </section>
                 <!--  обо мне -->        
                 <section class="about">
@@ -97,17 +96,17 @@
                         <p class="about__left_text">В этом видео вы познакомитесь со мной, узнаете о  моём взгляде на современную психологию и том чем я могу вам помочь</p>
                     </div>
                     <div class="about_right">
-                        <h2 class="about__header">Кто я</h2>
-                        <p class="about__description">
+                        <h2 class="about_right__header">Кто я</h2>
+                        <p class="about_right__description">
                             Давайте знакомиться: Елена Светличная, частный и личностный психолог. Веду практику с 2024 года.
                         </p>
-                        <ul class="about__list">
-                            <li class="about__item">Психолог-консультант. Направления: Mindfulness,  эмоционально-образная терапия, музыкальная терапия.</li>
-                            <li class="about__item"> Не могу не писать, не могу не говорить, это моё! Потребность невероятная! Работа с собой произвела на меня огромное впечатление, результаты прекрасные. Не хвалюсь, а делюсь!</li>
-                            <li class="about__item"> Хочу предложить Вам пройти путь совершенствования вместе. Мои преимущества: 32 года стажа работы с людьми, 15 лет руководитель в сфере музыкального образования, доброжелательна, открыта. </li>
-                            <li class="about__item">В работе опираюсь только на техники и методики с научно доказанной эффективностью.м</li>
+                        <ul class="about_right__list">
+                            <li class="about_right__list_item">Психолог-консультант. Направления: Mindfulness,  эмоционально-образная терапия, музыкальная терапия.</li>
+                            <li class="about_right__list_item"> Не могу не писать, не могу не говорить, это моё! Потребность невероятная! Работа с собой произвела на меня огромное впечатление, результаты прекрасные. Не хвалюсь, а делюсь!</li>
+                            <li class="about_right__list_item"> Хочу предложить Вам пройти путь совершенствования вместе. Мои преимущества: 32 года стажа работы с людьми, 15 лет руководитель в сфере музыкального образования, доброжелательна, открыта. </li>
+                            <li class="about_right__list_item">В работе опираюсь только на техники и методики с научно доказанной эффективностью.м</li>
                         </ul>
-                        <a class="about__link" href="about.html">Подробнее</a>
+                        <a class="about_right__link" href="about.html">Подробнее</a>
                     </div>
                 </section>
                 <!-- с чем могу помочь  -->
@@ -222,12 +221,12 @@
                         <div class="price_card">
                             <p class="price_card__description">Консультация / сессия</p>
                             <p class="price_card__ammount">5000 руб.</p>
-                            <a class="price__card_btn btn" href="online.html">Записаться</a>
+                            <a class="price_card__btn btn" href="online.html">Записаться</a>
                         </div>
                         <div class="price_card">
                             <p class="price_card__description">Консультация / сессия + поддержка / ведение в течение недели</p>
                             <p class="price_card__ammount">5000 руб.</p>
-                            <a class="price__card_btn btn" href="online.html">Записаться</a>
+                            <a class="price_card__btn btn" href="online.html">Записаться</a>
                         </div>
                     </div>
                 </section>
@@ -295,22 +294,24 @@
                     <picture class="credo__pic">
                         <img class="credo__image" src='/dist/images/credo_img.png' alt='credo_image'>
                     </picture>	
-                    <div class="credo_wrapp">	
-                        <p class="credo__description"> Я не обсуждаю с клиентами их проблемы, а прорабатываю их до "полного растворения". Моя задача - обеспечить не временную психологическую "анестезию", а скорректировать негативные установки которые мешают клиенту жить в гармонии с собой и окружающим миром</p>
-                    </div>
+                    <ul class="credo_wrapp">
+                        <li class="credo_wrapp__quote"><img src="/dist/images/icons/quotes.png" alt=""></li>	
+                        <li class="credo_wrapp__description"> Я не обсуждаю с клиентами их проблемы, а прорабатываю их до "полного растворения". Моя задача - обеспечить не временную психологическую "анестезию", а скорректировать негативные установки которые мешают клиенту жить в гармонии с собой и окружающим миром</li>
+                        <li class="credo_wrapp__quote credo_wrapp__quote_bottom"><img src="/dist/images/icons/quotes.png" alt=""></li>
+                    </ul>
                 </section>
             <div class="wrapp">
                 <!-- Блог -->
                 <section class="blogs">
                     <h2 class="blogs__title">Статьи</h2>
                     <div class="blogs_wrapp">
-                        <div class="article big">
+                        <div class="article_big">
                             <picture class="article__pic">
                                 <!-- <source type='image/avif' srcset='./image/.avif'>
                                 <source type='image/webp' srcset='./image/.webp' > -->
-                                <img class="article__image" src='/dist/images/article_big.png' alt='article_image'>
+                                <img class="article__image" src='/dist/images/article_3.png' alt='article_image'>
                             </picture>	
-                            <div class="big_article_wrapp">
+                            <div class="article_big_wrapp">
                                 <span class="article__date">05.05.2025</span>
                                 <h2 class="article__title">Как справиться с социофобией</h2>
                                 <p class="article__description">Можно ли самостоятельно побороть социофобию или нужно обращаться к специалисту? Когда человек становиться социофобом? Как это мешае...</p>
@@ -322,7 +323,7 @@
                                 <picture class="article__pic">
                                     <!-- <source type='image/avif' srcset='./image/.avif'>
                                     <source type='image/webp' srcset='./image/.webp' > -->
-                                    <img class="article__image small" src='/dist/images/virt.webp' alt='article_image'>
+                                    <img class="article__image_small" src='/dist/images/virt.webp' alt='article_image'>
                                 </picture>	
                                 <div class="article__wrapp">
                                     <span class="article__date">05.05.2025</span>
@@ -335,7 +336,7 @@
                                 <picture class="article__pic">
                                     <!-- <source type='image/avif' srcset='./image/.avif'>
                                     <source type='image/webp' srcset='./image/.webp' > -->
-                                    <img class="article__image small" src='/dist/images/article_2.png' alt='article_image'>
+                                    <img class="article__image_small" src='/dist/images/article_2.png' alt='article_image'>
                                 </picture>	
                                 <div class="article__wrapp">
                                     <span class="article__date">05.05.2025</span>
