adapt_index_finaly

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <h2 class="reviews__title">Отзывы о моей работе</h2>
                     <div class="reviews_wrapp">
                             <div class="owl-carousel owl-theme" id="slider">
-                                <div class="reviews_card__block">
+
                                     <ul class="review_card">
                                         <li class="review_card__date">25.05.2025</li>
                                         <li class="review_card__title">Ирина, г. Санкт-Петербург</li>
@@ -266,8 +266,6 @@
                                         <li class="review_card__title">Алина г. Санкт-Петербург</li>
                                         <li class="review_card__description">С профессиональным праздником Елена! Желаю процветания и интересных задач, успехов в Вашей публицистической деятельности!</li>
                                     </ul>
-                                </div>
-                                <div class="reviews_card__block">
                                     <ul class="review_card">
                                         <li class="review_card__date">22.05.2025</li>
                                         <li class="review_card__title">Василий г. Санкт-Петербург</li>
@@ -283,7 +281,7 @@
                                         <li class="review_card__title">Самсон г. Санкт-Петербург</li>
                                         <li class="review_card__description">С профессиональным праздником Елена! Желаю процветания и интересных задач, успехов в Вашей публицистической деятельности!</li>
                                     </ul>
-                                </div>
+                              
                             </div>                       
                     </div>
                     <a class="reviews__btn btn" href="reviews.html">Смотреть все отзывы</a>
@@ -354,10 +352,10 @@
         <footer class="footer">
             <div class="footer_top">
                 <div class="footer_wrapp">
-                    <div class="logo">
-                        <a href="index.html"><img class="footer_logo" src="/dist/images/footer_logo.png" alt="logo"></a>
+                    <div class="logo footer_logo">
+                        <a href="index.html"><img class="footer_logo_img" src="/dist/images/footer_logo.png" alt="logo"></a>
                     </div>
-                    <div class="social_wrapp footer_social">
+                    <div class="footer_social">
                         <a class="footer_top__social_link" href="https://vk.com/svetemuzic"><img class="footer_top__social_icons" src="/dist/images/icons/vk.png" alt="vk_icon"></a>
                         <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="/dist/images/icons/telegramm.png" alt="telegram_icon"></a>
                         <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="/dist/images/icons//whatsapp.png" alt="whatsapp_icon"></a>                     
@@ -376,7 +374,7 @@
                 <div class="footer_contacts">
                     <div class="footer_phone">
                         <img src="/dist/images/icons/phone.png" alt="phone_icon">
-                        <a href="tel:89104570560" class="phone_number">8(910)457-05-60</a>
+                        <a href="tel:89104570560" class="footer_phone__number">8(910)457-05-60</a>
                     </div>
                     <div class="email">
                         <img src="/dist/images/icons/mail.png" alt="email_icon">
